# CourseWork-second-course-

./: .gitignore  asd  evalueate_dataset.py  outlines&llava.py  pyproject.toml  pyrightconfig.json  run_clip_classification.py  run_coco_evaluate.py  run_cv.py  run_vlm.py  test_outlines.py
metrics/: classification.py  detection.py
model/CV/: yolo_model.py
model/vlm/: abstract_model.py  baseline.py  model.py  model_factory.py  quant.py  run_clip.py
predictions/: coco_dino_tiny.csv  coco_yolo.csv  data_for_pred_dino_night.txt  data_for_predctions_yolo.txt
utils/: classification.py  down_data.py  fo_evaluate.py  herna.py  pars_oxford_pet.py  read_xml.py  visualizer.py
