[project]
name = "coursework"
version = "0.1.0"
description = "my_disc"
authors = [
    {name = "vooterr",email = "zigl.zigl535@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11.0,<3.13"
dependencies = [
    "pillow (>=12.1.0,<13.0.0)",
    "hf-xet (>=1.2.0,<2.0.0)",
    "bitsandbytes (==0.42.0)",
    "accelerate (>=1.12.0,<2.0.0)",
    "sentencepiece (>=0.2.1,<0.3.0)",
    "protobuf (>=6.33.3,<7.0.0)",
    "tokenizers (>=0.22,<=0.23)",
    "diffusers (>=0.36.0,<0.37.0)",
    "setuptools (>=80.10.1,<81.0.0)",
    "timm (>=1.0.24,<2.0.0)",
    "kagglehub (>=0.4.1,<0.5.0)",
    "transformers (<5.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "regex (>=2026.1.15,<2027.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "dashscope (>=1.25.10,<2.0.0)",
    "qwen-vl-utils (>=0.0.14,<0.0.15)",
    "einops (>=0.8.2,<0.9.0)",
    "vllm (>=0.15.1,<0.16.0)",
    "lm-format-enforcer (>=0.11.3,<0.12.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "ultralytics (>=8.4.21,<9.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"


[tool.poetry.dependencies]

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.2.0"

